Feature: Delete parties
